# elasticsearch-index-cleaner

./: Cargo.toml  Dockerfile
.github/workflows/: docker-image.yml
src/: args.rs  date.rs  es.rs  lib.rs  main.rs
