[package]
name = "elasticsearch-index-cleaner"
authors = ["Lichuan Shang <lichuan.shang@gmail.com>"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
tokio = { version = "1.5.0", features = ["rt-multi-thread", "macros"] }
elasticsearch = { version = "7.12.0-alpha.1" }
url = "2.2.1"
serde_json = "1.0.64"
reqwest = "0.11.3"
anyhow = "1.0.40"
serde = { version = "1.0.125", features = ["derive"] }
chrono = "0.4.19"
log = "0.4.14"
env_logger = "0.8.3"
